# sql-agent-chatbot

./: .env  LICENSE  README.md  app.py  pyproject.toml
sql-chatbot-app/: .env.example  README.md
sql-chatbot-app/db/: schema.sql  seed.sql
sql-chatbot-app/db/migrations/: 0001_init.sql
sql-chatbot-app/docker/: README.md  docker-compose.yml
sql-chatbot-app/docs/: README.md
sql-chatbot-app/docs/architecture/: direct-sql.md  rag-over-sql.md
sql-chatbot-app/tests/api/: chat.test.http
sql-chatbot-app/tests/e2e/: README.md
sql-chatbot-app/variants/direct-sql/: README.md
sql-chatbot-app/variants/rag-over-sql/: README.md
vector_store/: chroma.sqlite3  index.faiss  index.pkl
